styles/style.css
.header {
  display: grid;
  grid-template-columns:  1fr auto 1fr;
  align-items:center;
  margin: 92px 24px 94px 24px;
  padding: 0px 26px;
}

/* список ссылок */
.header__links-list {
  display: flex;
  flex-direction: row;
  gap: 32px;
}

.header__links-list-item {
  list-style: circle;
}

/* сделать ссылку без кружочка перед ней */
.header__links-list-item_no-bullit {
  list-style: none;
}

/* ссылка */
.header__link {
  color: #000;
  font-weight: 400;
  font-size: 18px;
  font-style: normal;
  line-height: normal;
  letter-spacing: 0.18px;
}

/* активная ссылка */
.header__link_active {
  text-decoration: none;
}

/* контейнер логотипа */
.header__logo {
  display: block;
  width: 148px;
  margin: auto;
}

/* картинка с логотипом */
.header__logo-image {
  width: 148px;
  height: 105px;
  object-fit: cover;
  object-position: top;
}

/*контейнер с адресом*/
.address {
  display: flex;
  flex-direction: column;
  max-width: 240px;
  color: #000;
  font-size: 18px;
  font-style: normal;
  line-height: 1.35;
}

.header__address {
  justify-self: right;
}

.cover {
  position: relative;
  min-height: 757px;
  padding: 165px 50px 50px 50px;
  background-image: url(../images/cover.jpg);
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
}

/* полупрозрачный блок поверх секции */
.overlay {
  position: absolute;
  inset: 0;
  z-index: 0;
  background: rgba(0,0,0, 0.6);
}

/* заголовок */
.cover__title {
  position: relative;
  z-index: 2;
  width: 100%;
  color: #FFF;
  font-weight: 700;
  font-size: 100px;
  font-style: normal;
  letter-spacing: 30px;
  text-transform: uppercase;
}

/* выравнивания строк текста и превращения их в блочный элемент */
.aligned-text {
  display: block;
  line-height: 1.15; /* 115px */
}

.aligned-text_center {
  text-align: center;
  line-height: 1;
  margin-top: 20px;
  margin-bottom: 20px;
}

.aligned-text_right {
  text-align: right;
  line-height: 1;
}

/* класс для управления межбуквенным расстоянием в местах, где есть эти акценты */
.letter-spacing-extended {
  letter-spacing: 60px;
}

/* класс для обнуления общего межбуквенного расстояния для последней буквы */
.no-letter-spacing {
  letter-spacing: 0px;
}

/* контейнер для подзаголовка и кнопки */
.cover__description {
  position: relative;
  z-index: 1;
  display: flex;
  justify-content: right;
  align-items: center;
  gap: 78px;
  margin-top: 135px;
}

/* текст подзаголовка */
.cover__description-text {
  color: #FFF;
  font-weight: 400;
  font-size: 22px;
  font-style: normal;
  line-height: 28px; /* 127.273% */
  text-transform: uppercase;
  word-spacing: 18px;
}

/* кнопка «Сделать ставку» */
.bet-button {
  width: 257px;
  height: 52px;
  border: 1px solid #FFF;
  padding: 12px 32px;
  color: #FFF;
  font-weight: 500;
  font-size: 22px;
  font-style: normal;
  line-height: normal;
  text-align: center;
  text-transform: uppercase;
  background: transparent;
  font-family: inherit;
}

.lots {
  margin: 179px 24px 0px 24px;
}

/* заголовок секции */
.lots__heading {
  margin-left: 40px;
  color: #000;
  font-weight: 700;
  font-size: 40px;
  font-style: normal;
  line-height: normal;
  text-transform: uppercase;
}

/* список карточек */
.lots__card-list {
  display: flex;
  gap: 25px;
  list-style: none;
}

/* пункт списка карточки */
.lots__card-list-item {
  flex-grow: 1;
  width: 430px;
  min-height: 450px;
  margin-top: 27px;
}

/* карточка */
.card {
  position: relative;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  height: 100%;
  padding: 50px 40px;
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
}

/* определённый фон каждой из карточек */
.card_type_film {
  background-image: url("../images/card-lot-01.jpg");
}

.card_type_book {
  background-image: url("../images/card-lot-02.jpg");
} 

.card_type_picture {
  background-image: url("../images/card-lot-03.jpg");
} 

/* заголовок карточки */
.card__title {
  position: relative;
  z-index: 1;
  color: #FFF;
  font-weight: 700;
  font-size: 22px;
  font-style: normal;
  line-height: 1.2; /* 26.4px */
  text-decoration: underline;
  text-transform: uppercase;
} 

/* текст карточки */
.card__text {
  position: relative;
  z-index: 1;
  color: #FFF;
  font-weight: 400;
  font-size: 20px;
  font-style: normal;
  line-height: 1.2; /* 24px */
}

/* ссылка «Посмотреть больше» */
.lots__look-more-link {
  display: inline-block;
  margin-top: 30px;
  margin-left: 40px;
  color: #000;
  font-weight: 400;
  font-size: 20px;
  font-style: normal;
  line-height: normal;
}

.about {
  display: grid;
  grid-template-columns: 1fr 2fr;
  column-gap: 10px;
  margin: 146px 24px 0px 24px;
}

.about__column {

}

/* контейнер с логотипом */
.about__logo {
  display: flex;
  justify-content: center;
  width: 240px;
  height: 240px;
  margin: 35px auto auto auto;
  border-radius: 50%;
  background-color: #000;
}

/* изображение логотипа */
.about__logo-image {
  width: 60%;
}

/* заголовок секции */
.about__title {
  margin-top: 136px;
  margin-bottom: 100px;
  color: #000;
  font-weight: 700;
  font-size: 40px;
  font-style: normal;
  line-height: normal;
  text-transform: uppercase;
}

.about__text-block {
  display: flex;
  flex-direction: column;
  gap: 25px;
}

/* блок для текстов секции */
.about__text {
  margin-top: 24px;
  color: #000;
  font-weight: 400;
  font-size: 20px;
  line-height: 1.2; /* 120% */
  letter-spacing: 0.2px;
}

.footer {
  display: flex;
  justify-content: space-between;
  align-content: start;
  margin: 180px 50px 90px 50px;
}

/* блок навигации по списку ссылок */
.footer__menu {
  font-size: 18px;
  text-align: center;
}

/* список пунктов меню */
.footer__menu-list {
  list-style: none;
} 

.footer__menu-link {
  color: #000;
  text-align: center;
  font-size: 18px;
  font-style: normal;
  font-weight: 400;
  line-height: normal;
}

/* активная ссылка меню (без подчёркивания) */
.footer__menu-link_active {
  text-decoration: none;
}

/* список ссылок на социальные сети */
.footer__social-list {
  display: flex;
  gap: 48px;
  list-style: none;
}

/* ссылка на социальные сети */
.footer__social-link {
  display: block;
  width: 48px;
  height:  48px;
}

